[package]
name = "ossfs"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = {git = "https://github.com/divinerapier/rust-fuse", tag = "0.4.0"}
libc = "0.2.62"
time = "0.1.42"
log = "0.4.8"
env_logger = "0.6.2"
nix = "0.15.0"
rusoto_s3 = "0.40.0"
rusoto_core = "0.40.0"
threadpool = "1.7.1"
id_tree = "1.7.0"
walkdir = "2.2.9"
clap = "2.33.0"

# examples and tests
[dev-dependencies]
walkdir = "2.2.9"
clap = "2.33.0"

[[bin]]
name = "simple-server"
path = "examples/simple-server/main.rs"

[[bin]]
name = "listreadfiles"
path = "benches/listreadfiles/main.rs"

[[bin]]
name = "readfiles"
path = "benches/readfiles/main.rs"
