[package]
name = "ossfs"
version = "0.1.0"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = {git = "https://github.com/divinerapier/rust-fuse", tag = "0.4.0"}
libc = "0.2.62"
time = "0.1.42"
log = "0.4.8"
env_logger = "0.7.0"
nix = "0.15.0"
rusoto_s3 = "0.41.0"
rusoto_core = "0.41.0"
threadpool = "1.7.1"
id_tree = "1.7.0"
walkdir = "2.2.9"
md5 = "0.6.1"
srand = "0.4.0"
hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"]}
url = "2.1.0"
bytes = "0.4.6"
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
futures-core-preview = "=0.3.0-alpha.19"
futures-channel-preview = "=0.3.0-alpha.19"
futures-util-preview = "=0.3.0-alpha.19"
tokio = "=0.2.0-alpha.6"
tokio-executor = "=0.2.0-alpha.6"
tokio-io = "=0.2.0-alpha.6"
serde = { version = "1.0.101", features = ["derive"]}
serde_json = "1.0.41"
chrono = {version = "*", features = ["serde"]}
num_cpus = "1.10.1"
spmc = "0.3.0"
rayon = "1.1"

[dependencies.clap]
version = "2.33.0"
default-features = false
# Cherry-pick the features you'd like to use
features = [ "suggestions", "color" ]

# dependencies for examples
[dev-dependencies]
walkdir = "2.2.9"
clap = "2.33.0"

# examples
[[bin]]
name = "simple-server"
path = "examples/simple-server/main.rs"

# tools
[[bin]]
name = "readfiles"
path = "tools/readfiles/main.rs"

[[bin]]
name = "md5checker"
path = "tools/md5checker/main.rs"

[[bin]]
name = "dd"
path = "tools/dd/main.rs"

[[bin]]
name = "prepare-filelist"
path = "tools/prepare-filelist/main.rs"

[[bin]]
name = "bench-seaweedfs"
path = "tools/bench-seaweedfs/main.rs"

# profile
[profile.release]
debug = true
